// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiSelect /> matches snapshot 1`] = `
<div>
  <div
    class=" css-1s0j1mq-inputContainerBaseStyles-inputContainerBaseStyles-inputBaseStyles-inputBaseStyles-multiSelectContainer-multiSelectContainer"
  >
    <label
      class="css-xs6o3g-label-label"
      for="downshift-6-toggle-button"
      id="testMultiSelect"
    >
      Test Multi-select
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-6-label downshift-6-toggle-button"
      class="select-btn"
      id="downshift-6-toggle-button"
      type="button"
    >
      Test placeholder
      <svg-file-stub
        height="24"
      />
    </button>
    <ul
      aria-labelledby="downshift-6-label"
      data-testid="list-container"
      id="downshift-6-menu"
      role="listbox"
      tabindex="-1"
    >
      <div
        class="content"
      >
        <span
          class="css-26eo9i-textContainer-textContainer"
          data-testid="text-component"
        >
           Select one or more items
        </span>
        <button
          class="close-btn"
          data-testid="close-btn"
        >
          <svg-file-stub
            height="20"
          />
        </button>
      </div>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-6-item-0"
            name="all"
            role="option"
            type="checkbox"
            value="all"
          />
          <label
            for="downshift-6-item-0"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            All
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-6-item-1"
            name="progress"
            role="option"
            type="checkbox"
            value="progress"
          />
          <label
            for="downshift-6-item-1"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            In progress
          </label>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<MultiSelect /> matches snapshot with \`inline = true\` 1`] = `
<div>
  <div
    class="inline css-1s0j1mq-inputContainerBaseStyles-inputContainerBaseStyles-inputBaseStyles-inputBaseStyles-multiSelectContainer-multiSelectContainer"
  >
    <label
      class="css-xs6o3g-label-label"
      for="downshift-7-toggle-button"
      id="testMultiSelect"
    >
      Test Multi-select
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-7-label downshift-7-toggle-button"
      class="select-btn"
      id="downshift-7-toggle-button"
      type="button"
    >
      Test placeholder
      <svg-file-stub
        height="24"
      />
    </button>
    <ul
      aria-labelledby="downshift-7-label"
      data-testid="list-container"
      id="downshift-7-menu"
      role="listbox"
      tabindex="-1"
    >
      <div
        class="content"
      >
        <span
          class="css-26eo9i-textContainer-textContainer"
          data-testid="text-component"
        >
           Select one or more items
        </span>
        <button
          class="close-btn"
          data-testid="close-btn"
        >
          <svg-file-stub
            height="20"
          />
        </button>
      </div>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-7-item-0"
            name="all"
            role="option"
            type="checkbox"
            value="all"
          />
          <label
            for="downshift-7-item-0"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            All
          </label>
        </div>
      </li>
      <li>
        <div
          class="checkbox-container css-6emo4e-checkboxContainer-checkboxContainer"
          style="padding: 0px 0px 0px 0.5rem;"
        >
          <input
            aria-selected="false"
            id="downshift-7-item-1"
            name="progress"
            role="option"
            type="checkbox"
            value="progress"
          />
          <label
            for="downshift-7-item-1"
          >
            <span
              aria-hidden="true"
              class="shadow-element"
              tabindex="-1"
            />
            In progress
          </label>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
